# pyggnn

./: README.md  requirements.txt  setup.cfg
src/egnn-pyg/: __init__.py  conv.py
src/egnnpyg/: __init__.py  base.py  conv.py  egnn.py  initialize.py  out.py  swish.py
src/example/: example.ipynb
src/pygegnn/: __init__.py  base.py  conv.py  data.py  egnn.py  initialize.py  out.py  swish.py
src/pygegnn/model/: egnn.py
src/pygegnn/nn/: __init__.py  conv.py  out.py
src/pyggnn/model/: egnn.py
src/pyggnn/nn/: conv.py  out.py
